src/main/java/com/example/mayoSpringboot/error/exception/BusinessException.java
package com.example.mayoSpringboot.error.exception;

import com.example.mayoSpringboot.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException{
    private final ErrorCode errorCode;


    public BusinessException(ErrorCode errorCode, String message) {
        super(message);
        this.errorCode = errorCode;
    }
}
